修改用法